# midi-karaoke-lyrics-extractor

./: .gitignore  .gitmodules  CMakeLists.txt  json.h  lyrics.cpp  lyrics.h  lyrics_event.cpp  lyrics_event.h  lyrics_extractor.cpp  lyrics_extractor.h  lyrics_serializer.cpp  lyrics_serializer.h  main.cpp  song.json
